Integrate client into pubber